[client]: Url params on partner page

--- a/client/src/public/partials/partner.html
+++ b/client/src/public/partials/partner.html
@@ -98,8 +98,8 @@
           ng-data="citationData"
           start-date="selectedMinDate"
           end-date="selectedMaxDate"
-          raw-start-date="minDateRange"
-          raw-end-date="maxDateRange"
+          raw-start-date="minDate"
+          raw-end-date="maxDate"
         ></bar-chart>
       </div>
     </div>
