--- a/client/src/public/partials/partner.html
+++ b/client/src/public/partials/partner.html
@@ -161,6 +161,7 @@
               legend="heatmapLegend"
               color="heatmapColor"
               opacity="heatmapOpacity"
+              tooltip-function="reporter.tooltip"
             ></heatmap>
           </div>
         </div>
