[client]: Correct some wording

--- a/client/src/public/partials/world.html
+++ b/client/src/public/partials/world.html
@@ -137,7 +137,7 @@
               theme="bootstrap"
               ng-change="change(entities.sourceCountryEntity.selected)"
             >
-              <ui-select-match class="ui-select-match" placeholder="Country"></ui-select-match>
+              <ui-select-match class="ui-select-match" placeholder="Reporting"></ui-select-match>
               <ui-select-choices
                 class="ui-select-choices"
                 repeat="item in reportingCountryEntities | filter: $select.search"
