--- a/client/src/public/partials/reporting.html
+++ b/client/src/public/partials/reporting.html
@@ -260,7 +260,7 @@
             >
               <ui-select-match
                 class="ui-select-match"
-                placeholder="Entities"
+                placeholder="Partner"
                 ng-style="{color:elm.color}"
               ></ui-select-match>
               <ui-select-choices
