[client]: Correct some wording (2)

--- a/client/src/public/partials/partner.html
+++ b/client/src/public/partials/partner.html
@@ -193,7 +193,7 @@
             >
               <ui-select-match
                 class="ui-select-match"
-                placeholder="Reporter"
+                placeholder="Reporting"
                 ng-style="{color:elm.color}"
               ></ui-select-match>
               <ui-select-choices
