[client]: Adding average trade volume filter and heatmap color with quantile on page partner #96

--- a/client/src/public/partials/partner.html
+++ b/client/src/public/partials/partner.html
@@ -159,7 +159,7 @@
               start-date="minDate"
               end-date="maxDate"
               legend="heatmapLegend"
-              color="heatmapColor"
+              color="reporter.color"
               opacity="heatmapOpacity"
               tooltip-function="reporter.tooltip"
             ></heatmap>
