--- a/client/src/public/partials/home.html
+++ b/client/src/public/partials/home.html
@@ -21,24 +21,26 @@
 <div class="container-fluid container-links">
   <div class="row">
     <div class="col-md-12">
-      <div class="container">
+      <div class="container ">
         <div class="row">
+          
           <div class="col-sm-6 col-md-3">
-            <div class="box-bg box-bg-world">
+            <div class="box-bg box-bg-country">
               <div class="box-container">
-                <a href="#/world" class="btn btn-link box text-center">
-                  <h2>World</h2>
-                  <p>{{ 'HOME_WORLD_PARA' | translate }}</p>
+                <a href="#!/reporting" class="btn btn-link box text-center">
+                  <h2>Reporting</h2>
+                  <p>{{ 'HOME_REPORTING_PARA' | translate }}</p>
                 </a>
               </div>
             </div>
           </div>
+          
           <div class="col-sm-6 col-md-3">
-            <div class="box-bg box-bg-country">
+            <div class="box-bg box-bg-partner">
               <div class="box-container">
-                <a href="#/reporting" class="btn btn-link box text-center">
-                  <h2>Reporting</h2>
-                  <p>{{ 'HOME_REPOERTING_PARA' | translate }}</p>
+                <a href="#!/partner" class="btn btn-link box text-center">
+                  <h2>Partner</h2>
+                  <p>{{ 'HOME_REPORTING_PARA' | translate }}</p>
                 </a>
               </div>
             </div>
@@ -46,7 +48,7 @@
           <div class="col-sm-6 col-md-3">
             <div class="box-bg box-bg-bilateral">
               <div class="box-container">
-                <a href="#/bilateral" class="btn btn-link box text-center">
+                <a href="#!/bilateral" class="btn btn-link box text-center">
                   <h2>Bilateral</h2>
                   <p>{{ 'HOME_BILATERAL_PARA' | translate }}</p>
                 </a>
@@ -54,16 +56,49 @@
             </div>
           </div>
           <div class="col-sm-6 col-md-3">
+            <div class="box-bg box-bg-world">
+              <div class="box-container">
+                <a href="#!/world" class="btn btn-link box text-center">
+                  <h2>World</h2>
+                  <p>{{ 'HOME_WORLD_PARA' | translate }}</p>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+  
+      <div class="container">
+        <div class="row">
+          <div class="col-0 col-sm-0 col-md-3"></div>
+
+          <div class="col-6 col-sm-6 col-md-3">
             <div class="box-bg box-bg-metadata">
               <div class="box-container">
-                <a href="#/metadata" class="btn btn-link box text-center">
+                <a href="#!/metadata" class="btn btn-link box text-center">
                   <h2>Metadata</h2>
                   <p>{{ 'HOME_METADATA_PARA' | translate }}</p>
                 </a>
               </div>
             </div>
           </div>
+          <div class="col-6 col-sm-6 col-md-3">
+            <div class="box-bg box-bg-rates">
+              <div class="box-container">
+                <a href="#!/rates" class="btn btn-link box text-center">
+                  <h2>Exchange rates</h2>
+                  <p>{{ 'HOME_METADATA_PARA' | translate }}</p>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-0 col-sm-0 col-md-3"></div>
         </div>
+    
       </div>
     </div>
   </div>
@@ -111,6 +146,7 @@
       </p>
     </div>
   </div>
+
 </div>
 <div class="container-fluid container-rss">
   <div class="row">
