Political status finalized fixes #91

--- a/client/src/public/css/style.css
+++ b/client/src/public/css/style.css
@@ -1763,7 +1763,7 @@ h4.titleMultiLine > div {
   max-height: inherit;
 }
 
-.heatmap-tooltip {
+.heatmap-tooltip, .politicalstatus-tooltip {
   position: fixed;
   visibility: hidden;
   opacity: 0.8;
